corrected alignment of icons

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -165,6 +165,7 @@ a {
     display: flex;
     justify-content: space-evenly;
     margin: 2% 0;
+    padding: 0 2%;
     width: 100%;
 }
 
@@ -180,18 +181,21 @@ a {
 .header-nav-button-icon {
     width: 10%;
     height: auto;
+    box-sizing: content-box;
 }
 
 .icon-link {
     display: flex;
-    width: 100%;
+    align-items: center;
     justify-content: center;
+    gap: 10px;
+    width: 100%;
     color: #95F450;
 }
 
 .icon-text {
     font-size: 30px;
-    margin: 0% 30%;
+    margin: 0;
     font-family: 'Fira Code';
     font-weight: lighter;
 }
